# AptEncode

./: CMakeLists.txt  LICENSE  README.md  WavAptEncoder.cpp  WavAptEncoder.h  main.cpp
